--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-title: Your awesome title
-author: GitHub User
+title: Lebron vs. Harden
+author: Pap Roach
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Lebron is almost single handedly carrying his team this year while James Harden is having one of the best offensive years in history.
 
 # social links
 twitter_username: your-twitter-handle
@@ -12,4 +10,4 @@ github_username:  your-github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-dinky
+theme: minima
